Added stroke effects for city name

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ p {
 
 .city {
   color: #f0f8ff;
+  text-shadow:
+  -1px -1px 0 #000,  
+  1px -1px 0 #000,
+  -1px 1px 0 #000,
+  1px 1px 0 #000;
 }
 
 .temp {
